@@ -1,0 +1,14 @@
+layer at (0,0) size 800x600
+  RenderCanvas at (0,0) size 800x600
+layer at (0,0) size 800x600
+  RenderBlock {HTML} at (0,0) size 800x600
+    RenderBody {BODY} at (8,8) size 784x584
+      RenderBlock {DIV} at (0,0) size 154x130 [border: (2px solid #FF0000)]
+        RenderText {TEXT} at (2,2) size 149x126
+          text run at (2,2) width 149: "Even though this div is "
+          text run at (2,20) width 149: "white-space pre, the tex"
+          text run at (2,38) width 145: "t inside should still wra"
+          text run at (2,56) width 145: "p to multiple lines beca"
+          text run at (2,74) width 147: "use of the word-wrap:b"
+          text run at (2,92) width 147: "reak-word CSS propert"
+          text run at (2,110) width 12: "y."
