@@ -1,0 +1,1 @@
+<div style="border:2px solid red;width:150px;word-wrap:break-word;white-space:pre">Even though this div is white-space pre, the text inside should still wrap to multiple lines because of the word-wrap:break-word CSS property.</div>
